# LinuxSoftPhone

./: .gitignore  BUILDING_FEDORA.md  CMakeLists.txt  LinuxSoftPhone.desktop  RPM_README.md  build_and_run.sh  build_fedora.sh  create_deb.sh  create_rpm.sh  create_rpm_simple.sh  facetonesoftphone.spec  install.sh
.agents/workflows/: build-and-run.md
rpm-package/SPECS/: facetonesoftphone.spec
rpmbuild/SPECS/: facetonesoftphone.spec
src/: Agent.cpp  Agent.h  AppConfig.cpp  AppConfig.h  CommandServer.cpp  CommandServer.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  main.cpp
